--- a/thehive-templates/OpenCTI_SearchObservable_1_0/long.html
+++ b/thehive-templates/OpenCTI_SearchObservable_1_0/long.html
@@ -29,35 +29,35 @@
 			<dl class="dl-horizontal" ng-if="res.observable.markingDefinitions.length > 0" >
 				<dt>Marking Definitions:</dt>
 				<dd ng-repeat="md in res.observable.markingDefinitions">
-					<span ng-if="md.colour==='#ffffff'" class="label"
-					ng-style="{'border':'1px solid','color': '#000000', 'background-color': md.colour}">{{md.definition}}
+					<span ng-if="md.color==='#ffffff'" class="label"
+					ng-style="{'border':'1px solid','color': '#000000', 'background-color': md.color}">{{md.definition}}
 					</span>
-					<span ng-if="md.colour!=='#ffffff'" class="label"
-					ng-style="{'background-color': md.colour}">{{md.definition}}
+					<span ng-if="md.color!=='#ffffff'" class="label"
+					ng-style="{'background-color': md.color}">{{md.definition}}
 					</span>
 				</dd>
 			</dl>
 			<dl class="dl-horizontal" ng-if="res.observable.tags.length > 0" >
 				<dt>Tags:</dt>
 				<dd ng-repeat="tag in res.observable.tags">
-					<span ng-if="tag.colour==='#ffffff'" class="label"
-					ng-style="{'border':'1px solid','color': '#000000', 'background-color': tag.colour}">{{tag.tag_type}}:{{tag.value}}
+					<span ng-if="tag.color==='#ffffff'" class="label"
+					ng-style="{'border':'1px solid','color': '#000000', 'background-color': tag.color}">{{tag.tag_type}}:{{tag.value}}
 					</span>
-					<span ng-if="tag.colour!=='#ffffff'" class="label"
-					ng-style="{'background-color': tag.colour}">{{tag.tag_type}}:{{tag.value}}
+					<span ng-if="tag.color!=='#ffffff'" class="label"
+					ng-style="{'background-color': tag.color}">{{tag.tag_type}}:{{tag.value}}
 					</span>
 				</dd>
 			</dl>
 			<dl class="dl-horizontal" ng-if="res.observable.externalReferences.length > 0" >
 				<dt>External refs:</dt>
 				<dd ng-repeat="extref in res.observable.externalReferences">
-					<a target="_blank" class="label" href="{{extref.url}}">{{extref.source_name}}</a>
+					<a target="_blank" href="{{extref.url}}">{{extref.source_name}}</a>
 				</dd>
 			</dl>
 			<dl class="dl-horizontal" ng-if="res.observable.indicators.length > 0" >
 				<dt>Indicators:</dt>
 				<dd ng-repeat="ind in res.observable.indicators">
-					<a target="_blank" class="label" href="{{res.url}}/dashboard/signatures/indicators/{{ind.id}}">{{ind.indicator_pattern}}</a>
+					<a target="_blank" href="{{res.url}}/dashboard/signatures/indicators/{{ind.id}}">{{ind.indicator_pattern}}</a>
 				</dd>
 			</dl>
 		</div>
@@ -93,29 +93,29 @@
 			<dl class="dl-horizontal" ng-if="report.markingDefinitions.length > 0" >
 				<dt>Marking Definitions:</dt>
 				<dd ng-repeat="md in report.markingDefinitions">
-					<span ng-if="md.colour==='#ffffff'" class="label"
-					ng-style="{'border':'1px solid','color': '#000000', 'background-color': md.colour}">{{md.definition}}
+					<span ng-if="md.color==='#ffffff'" class="label"
+					ng-style="{'border':'1px solid','color': '#000000', 'background-color': md.color}">{{md.definition}}
 					</span>
-					<span ng-if="md.colour!=='#ffffff'" class="label"
-					ng-style="{'background-color': md.colour}">{{md.definition}}
+					<span ng-if="md.color!=='#ffffff'" class="label"
+					ng-style="{'background-color': md.color}">{{md.definition}}
 					</span>
 				</dd>
 			</dl>
 			<dl class="dl-horizontal" ng-if="report.tags.length > 0" >
 				<dt>Tags:</dt>
 				<dd ng-repeat="tag in report.tags">
-					<span ng-if="tag.colour==='#ffffff'" class="label"
-					ng-style="{'border':'1px solid','color': '#000000', 'background-color': tag.colour}">{{tag.tag_type}}:{{tag.value}}
+					<span ng-if="tag.color==='#ffffff'" class="label"
+					ng-style="{'border':'1px solid','color': '#000000', 'background-color': tag.color}">{{tag.tag_type}}:{{tag.value}}
 					</span>
-					<span ng-if="tag.colour!=='#ffffff'" class="label"
-					ng-style="{'background-color': tag.colour}">{{tag.tag_type}}:{{tag.value}}
+					<span ng-if="tag.color!=='#ffffff'" class="label"
+					ng-style="{'background-color': tag.color}">{{tag.tag_type}}:{{tag.value}}
 					</span>
 				</dd>
 			</dl>
 			<dl class="dl-horizontal" ng-if="report.externalReferences.length > 0" >
 				<dt>External refs:</dt>
 				<dd ng-repeat="extref in report.externalReferences">
-					<a target="_blank" class="label" href="{{extref.url}}">{{extref.source_name}}</a>
+					<a target="_blank" href="{{extref.url}}">{{extref.source_name}}</a>
 				</dd>
 			</dl>
 			<hr>
