--- a/thehive-templates/DomainToolsIris_Investigate_1_0/long.html
+++ b/thehive-templates/DomainToolsIris_Investigate_1_0/long.html
@@ -22,7 +22,7 @@
     <h3 style="position:absolute; right:2%;">
       <b>Iris Investigation:</b>
       <a
-        href="https://research.domaintools.com/{{content.domain}}"
+        href="https://research.domaintools.com/iris/search/?q={{content.domain}}"
         target="_blank"
         rel="noopener noreferrer"
       >
