--- a/thehive-templates/DomainToolsIris_Pivot_1_0/long.html
+++ b/thehive-templates/DomainToolsIris_Pivot_1_0/long.html
@@ -36,8 +36,8 @@
                 <td>{{d.domain_age}}</td>
                 <td><span class="label {{d.domain_risk.class}}">{{d.domain_risk.risk_score}}</span></td>
                 <td>
-                    <a href="https://research.domaintools.com/{{d.domain}}" target="_blank" rel="noopener noreferrer">
-                        https://research.domaintools.com/{{d.domain}}
+                    <a href="https://research.domaintools.com/iris/search/?q={{d.domain}}" target="_blank" rel="noopener noreferrer">
+                        Iris Investigation: {{d.domain}}
                     </a>
                 </td>
             </tr>
