--- a/thehive-templates/VMRay_3_1/long.html
+++ b/thehive-templates/VMRay_3_1/long.html
@@ -1,8 +1,8 @@
-<div class="panel panel-info" ng-if="success && content.scanreport.data.length > 0">
+<div class="panel panel-info" ng-if="success && content.samples.length > 0">
     <div class="panel-heading">
         VMRay Report
     </div>
-    <div class="panel-body" ng-repeat="sample in content.scanreport.data">
+    <div class="panel-body" ng-repeat="sample in content.samples">
         <dl class="dl-horizontal">
             <dt>Score</dt>
             <dd><a href="{{sample.sample_webif_url}}">{{sample.sample_score}}</a></dd>
@@ -10,23 +10,21 @@
         <dl class="dl-horizontal">
             <dt ng-if="sample.sample_severity">Severity</dt>
             <dd>
-				<span class="label" ng-class="{'label-success':sample.sample_severity === 'not_suspicious',
+                <span class="label" ng-class="{'label-success':sample.sample_severity === 'not_suspicious',
 					'label-danger': sample.sample_severity==='malicious',
 					'label-info': sample.sample_severity!='not_suspicious' && sample.sample_severity!='malicious'}">
-					{{sample.sample_severity}}
-				</span>
-                <!--<span class="label ">{{sample.sample_last_reputation_severity}}</span>-->
-
+                    {{sample.sample_severity}}
+                </span>
             </dd>
         </dl>
         <dl class="dl-horizontal">
             <dt>Last reputation</dt>
             <dd>
-				<span class="label" ng-class="{'label-info':sample.sample_last_reputation_severity === 'unknown',
+                <span class="label" ng-class="{'label-info':sample.sample_last_reputation_severity === 'unknown',
 					'label-danger': sample.sample_last_reputation_severity==='blacklisted',
 					'label-info': sample.sample_last_reputation_severity!='blacklisted'}">
-				{{sample.sample_last_reputation_severity}}
-				</span>
+                    {{sample.sample_last_reputation_severity}}
+                </span>
             </dd>
         </dl>
         <dl ng-if="sample.sample_webif_url" class="dl-horizontal">
@@ -60,7 +58,9 @@
         </dl>
     </div>
 </div>
-<div class="panel panel-success" ng-if="success && content.scanreport.data.length == 0">
+
+
+<div class="panel panel-success" ng-if="success && content.samples.length == 0">
     <div class="panel-heading">
         VMRay Report
     </div>
@@ -81,17 +81,16 @@
     </div>
 </div>
 
-<div class="panel panel-danger" ng-if="success && content.data.errors.length > 0">
+<div class="panel panel-danger" ng-if="success && content.errors.length > 0">
     <div class="panel-heading">
         VMRay Upload returned with an error (reanalyzation deactivated?)
     </div>
-    <div class="panel-body" ng-repeat="e in content.data.errors">
+    <div class="panel-body" ng-repeat="e in content.errors">
         <dl class="dl-horizontal">
             <dt><i class="fa fa-warning"></i> Error:</dt>
             <dd>{{e.error_msg}}</dd>
             <dt>Filename:</dt>
-            <dd><a href="https://vmray.analyse.certbund/user/sample/list?quick_search_value={{e.submission_filename}}">{{e.submission_filename}}
-                (search)</a></dd>
+            <dd>{{e.submission_filename}}</a></dd>
         </dl>
     </div>
 </div>
