--- a/thehive-templates/VMRay_3_1/short.html
+++ b/thehive-templates/VMRay_3_1/short.html
@@ -1,3 +1,5 @@
-<span class="label" ng-repeat="t in content.taxonomies" ng-class="{'info': 'label-info', 'safe': 'label-success', 'suspicious': 'label-warning', 'malicious':'label-danger'}[t.level]">
+<div class="label" ng-repeat="t in content.taxonomies"
+    ng-class="{'info': 'label-info', 'safe': 'label-success', 'suspicious': 'label-warning', 'malicious':'label-danger'}[t.level]"
+    style="display:inline-block;">
     {{t.namespace}}:{{t.predicate}}="{{t.value}}"
-</span>
+</div>
