fix observable name

--- a/thehive-templates/SpamAssassin_1_0/long.html
+++ b/thehive-templates/SpamAssassin_1_0/long.html
@@ -1,7 +1,7 @@
 <div class="panel panel-info" ng-if="success">
 
     <div class="panel-heading">
-        SpamAssassin score for <strong>{{artifact.data}}</strong>
+        SpamAssassin score for <strong>{{(artifact.data || artifact.attachment.name) | fang}}</strong>
     </div>
     <div class="panel-body">
         <h4>Final Score</h4>
