I changed the code to python 3

--- a/analyzers/FalconSandbox/long.html
+++ b/analyzers/FalconSandbox/long.html
@@ -25,7 +25,7 @@
                     <dd>
                        <div ng-switch on="key">
                             <div ng-switch-when="verdict">
-                                <span class="label" ng-class="{'label-info':value === 'No Specific Threat',
+                                <span class="label" ng-class="{'label-info':value === 'no specific threat',
 					            'label-warning': value==='suspicious',
 					            'label-danger': value==='malicious',
 					            'label-success': value==='no verdict'}">
