--- a/thehive-templates/Hashdd_Status_2_0/long.html
+++ b/thehive-templates/Hashdd_Status_2_0/long.html
@@ -4,10 +4,10 @@
         Hashdd report for <strong>{{artifact.data | fang}}</strong>
     </div>
     <div class="panel-body">
-            <dl class="dl-horizontal" ng-if="content.known_level">
-                <dt>Known Level</dt>
-                <dd>{{content.known_level || "No known level given."}}</dd>
-            </dl>
+        <dl class="dl-horizontal" ng-if="content.knownlevel">
+            <dt>Known Level</dt>
+            <dd>{{content.knownlevel || "No known level given."}}</dd>
+        </dl>
     </div>
 </div>
 
