--- a/thehive-templates/Hashdd_Detail_2_0/long.html
+++ b/thehive-templates/Hashdd_Detail_2_0/long.html
@@ -35,7 +35,7 @@
                 <dt>Size:</dt>
                 <dd class="wrap">{{result.details.hashdd_size}}</dd>
                 <dt>Results:</dt>
-                <dd class="wrap">{{content.search_results.lenght}}</dd>
+                <dd class="wrap">{{content.search_results.length}}</dd>
             </dl>
         </div>
 
