Fix email field returned in json

--- a/thehive-templates/EmailRep_1_0/long.html
+++ b/thehive-templates/EmailRep_1_0/long.html
@@ -1,7 +1,7 @@
 <div class="report-SecurityTrails" ng-if="success">
   <div class="panel panel-info">
     <div class="panel-heading">
-      emailrep.io lookup ({{ content.mail || "-" }})
+      emailrep.io lookup ({{ content.email || "-" }})
     </div>
     <div class="panel-body">
       <div ng-if="(content | json) === '{}'">
