greynose template fix

--- a/thehive-templates/GreyNoise_3_0/long.html
+++ b/thehive-templates/GreyNoise_3_0/long.html
@@ -27,7 +27,7 @@
                 </tr>
             </tbody>
         </table>
-        <p ng-if="!content.data">No records found for {{artifact.data}}.</p>
+        <p ng-if="!content">No records found for {{artifact.data}}.</p>
     </div>
 </div>
 
