--- a/thehive-templates/Hunterio_DomainSearch_1_0/long.html
+++ b/thehive-templates/Hunterio_DomainSearch_1_0/long.html
@@ -1,13 +1,12 @@
 <div class="panel panel-info" ng-if="success">
     <div class="panel-heading">
         <a href="https://hunter.io" target="_blank">hunter.io</a> domain search to find email addresses
-        <br/> Report for
+        <br /> Report for
         <strong>{{artifact.data}}</strong>
     </div>
     <div class="panel-body" ng-if="content.meta">
 
         <h4 class="dl-horizontal">{{content.meta.results}} addresses found.</h4>
-
 
         <div ng-if="content.data && content.data.emails.length > 0">
 
@@ -36,7 +35,8 @@
                     <td>{{email.fisrtname}} {{email.lastname}}</td>
                     <td>{{email.position}}</td>
                     <td>{{email.type}}</td>
-                    <td><a ng-if="email.twitter" href="https://twitter.com/{{email.twitter}}" target="_blank">{{email.twitter}}</a></td>
+                    <td><a ng-if="email.twitter" href="https://twitter.com/{{email.twitter}}"
+                            target="_blank">{{email.twitter}}</a></td>
                     <td><a ng-if="email.linkedin" href="{{email.linkedin}}" target="_blank">{{email.linkedin}}</a></td>
                     <td>{{email.phone_number}}</td>
                     <td>
@@ -55,12 +55,22 @@
             No results found
         </div>
     </div>
+</div>
 
-    <div class="panel panel-danger" ng-if="!success">
-        <div class="panel-heading">
-            <strong>{{(artifact.data || artifact.attachment.name) | fang}}</strong>
-        </div>
-        <div class="panel-body">
-            {{content.errorMessage}}
-        </div>
+<div class="panel panel-danger" ng-if="content.errors">
+    <div class="panel-heading">
+        <strong>Error during query submission</strong>
     </div>
+    <div class="panel-body">
+        <p ng-repeat="error in content.errors">{{error.details}}</p>
+    </div>
+</div>
+
+<div class="panel panel-danger" ng-if="!success">
+    <div class="panel-heading">
+        <strong>{{(artifact.data || artifact.attachment.name) | fang}}</strong>
+    </div>
+    <div class="panel-body">
+        {{content.errorMessage}}
+    </div>
+</div>
