--- a/thehive-templates/VirusTotal_Scan_3_0/long.html
+++ b/thehive-templates/VirusTotal_Scan_3_0/long.html
@@ -21,12 +21,12 @@
                     <dt>Last analysis date</dt>
                     <dd>{{content.scan_date}}</dd>
                 </dl>
-                <dl class="dl-horizontal" ng-if="artifact.dataType === 'url'">
+                <dl class="dl-horizontal" ng-if="content.permalink">
                     <dt>Virus Total</dt>
                     <dd>
                         <span>
                             <i class="fa fa-search"></i>
-                            <a ng-href="https://www.virustotal.com/en/url/{{artifact.data | sha256}}/analysis/" target="_blank">
+                            <a href="{{content.permalink}}" target="_blank">
                                 View Full Report</a>
                         </span>
                     </dd>
