Update fortiguard the hive template
The URL seems to have changed, where to get to the full report.
Update it, and switch to HTTPS. The url to recategorize still is
correct and already was https

--- a/thehive-templates/Fortiguard_URLCategory_2_1/long.html
+++ b/thehive-templates/Fortiguard_URLCategory_2_1/long.html
@@ -8,7 +8,7 @@
             <dt>Fortinet URL Category:</dt>
             <dd class="wrap">{{content.category}}&nbsp;
                 <i class="fa fa-search"></i>
-                <a ng-href="http://www.fortiguard.com/iprep?data={{artifact.data}}&lookup=Lookup" target="_blank">View Full Report</a>
+                <a ng-href="https://www.fortiguard.com/webfilter?q={{artifact.data}}" target="_blank">View Full Report</a>
                 <i class="fa fa-recycle"></i>
                 <a ng-href="https://fortiguard.com/faq/wfratingsubmit?url={{artifact.data}}" target="_blank">Request Recategorization</a>
             </dd>
