--- a/thehive-templates/HybridAnalysis_GetReport_1_0/long.html
+++ b/thehive-templates/HybridAnalysis_GetReport_1_0/long.html
@@ -69,7 +69,7 @@
       </dl>
       <dl class="dl-horizontal" ng-if="r.sha256">
           <strong>Online report:</strong>
-          <a href="https://www.hybrid-analysis.com/sample/{{r.sha256}}">https://www.hybrid-analysis.com/sample/{{r.sha256}}</a>
+          <a href="https://www.hybrid-analysis.com/sample/{{r.sha256}}" target="_blank">https://www.hybrid-analysis.com/sample/{{r.sha256}}</a>
         </dl>
       <hr>
     </div>
@@ -109,7 +109,7 @@
       </dl>
       <dl class="dl-horizontal" ng-if="r.sha256">
         <strong>Online report:</strong>
-        <a href="https://www.hybrid-analysis.com/sample/{{r.sha256}}">https://www.hybrid-analysis.com/sample/{{r.sha256}}</a>
+        <a href="https://www.hybrid-analysis.com/sample/{{r.sha256}}" target="_blank">https://www.hybrid-analysis.com/sample/{{r.sha256}}</a>
       </dl>
       <hr>
     </div>
