--- a/thehive-templates/OTXQuery_2_0/long.html
+++ b/thehive-templates/OTXQuery_2_0/long.html
@@ -43,7 +43,7 @@
 		<dl class="dl-horizontal">
 			<dt>Submit Pulse: </dt>
 			<dd class="wrap">
-				<i class="fa fa-bullhorn"></i> <a ng-href="https://otx.alienvault.com/pulse/create/" target="_blank">Create a Pulse</a>&nbsp;
+				<i class="fa fa-bullhorn"></i> <a ng-href="https://otx.alienvault.com/pulse/create" target="_blank">Create a Pulse</a>&nbsp;
 			</dd>
 		</dl>
 
