update EmailRep_1_0 template
Add the summary to the report, gives an indication about the why
of the classification, and maybe other details.

--- a/thehive-templates/EmailRep_1_0/long.html
+++ b/thehive-templates/EmailRep_1_0/long.html
@@ -28,6 +28,10 @@
             </ul>
           </dd>
         </dl>
+        <dl class="dl-horizontal">
+          <dt>Summary:</dt>
+          <dd class="wrap">{{ content.summary || "-" }}</dd>
+        </dl>
       </div>
     </div>
   </div>
