update Maltiverse_Report_1_0 template
fix URL to online report

--- a/thehive-templates/Maltiverse_Report_1_0/long.html
+++ b/thehive-templates/Maltiverse_Report_1_0/long.html
@@ -12,7 +12,7 @@
         <div class="panel-heading">
                 Maltiverse record for "{{artifact.data}}"</a>
                 <br/>
-                <a target="_blank" href="https://www.maltiverse.com/{{content.type}}/{{artifact.data}}">view more on www.maltiverse.com</a>
+                <a target="_blank" href="https://maltiverse.com/search;query={{artifact.data}};sort=creation_time_desc">view more on www.maltiverse.com</a>
         </div>
         <div class="panel-body">
             <dl class="dl-horizontal" ng-if="content.classification">
