--- a/thehive-templates/Msg_Parser_4_0/long.html
+++ b/thehive-templates/Msg_Parser_4_0/long.html
@@ -7,7 +7,6 @@
     </div>
 </div>
 
-
 <div class="panel panel-info" ng-if="success">
     <div class="panel-heading">
         Email message details
@@ -18,44 +17,58 @@
 
         <dl class="dl-horizontal">
             <dt>From</dt>
-            <dd>{{content.displayFrom}} ({{content.sender}})</dd>
+            <dd>{{content.sender}}</dd>
         </dl>
         <dl class="dl-horizontal">
             <dt>To</dt>
-            <dd>{{content.displayTo}} ({{content.receivers}})</dd>
+            <dd>{{content.receivers}}</dd>
         </dl>
         <dl class="dl-horizontal">
             <dt>Subject</dt>
             <dd>{{content.subject || '-'}}</dd>
         </dl>
         <dl class="dl-horizontal">
-            <dt>Topic</dt>
-            <dd>{{content.topic || '-'}}</dd>
+            <dt>Date</dt>
+            <dd>{{content.date || '-'}}</dd>
+        </dl>
+        <dl class="dl-horizontal">
+            <dt>X-Originating-IP</dt>
+            <dd>{{content.XoriginatingIP || '-'}}</dd>
+        </dl>
+        <dl class="dl-horizontal">
+            <dt>Message-ID</dt>
+            <dd>{{content.MessageID || '-'}}</dd>
         </dl>
         <dl class="dl-horizontal">
             <dt>Bcc</dt>
             <dd>{{content.bcc || '-'}}</dd>
         </dl>
+        
         <dl class="dl-horizontal" ng-if="content.attachments && content.attachments.length !== 0">
             <dt>Attachments</dt>
             <dd>
                 <div class="bm10">This message file includes
                     <ng-pluralize count="content.attachments.length" when="{'1': '1 attachment', 'other': '{} attachments'}"></ng-pluralize>
                 </div>
-                <table class="table table-hover">
+                <table class="table table-striped table-bordered">
                     <thead>
-                    <tr>
-                        <th>Filename</th>
-                        <th>Mime Type</th>
-                        <th>Extension</th>
-                    </tr>
+                        <tr>
+                            <th class="col-md-2">Filename</th>
+                            <th>File information</th>
+
+                        </tr>
                     </thead>
-                    <tbody>
-                    <tr ng-repeat="a in content.attachments">
-                        <td class="wrap">{{a.filename}}</td>
-                        <td class="wrap">{{a.mime}}</td>
-                        <td>{{a.extension}}</td>
-                    </tr>
+                    <tbody ng-repeat="a in content.attachments">
+                        <tr>
+                            <td rowspan=4>{{a.filename}}</td>
+                            <td>[MD5]: {{a.md5}}</td>
+                        </tr>
+                        <tr>
+                            <td>[SHA1]: {{a.sha1}}</td>
+                        </tr>
+                        <tr>
+                            <td>[SHA256]: {{a.sha256}}</td>
+                        </tr>
                     </tbody>
                 </table>
             </dd>
@@ -74,3 +87,4 @@
         </dl>
     </div>
 </div>
+
