--- a/thehive-templates/SEKOIAIntelligenceCenter_Observables_1_0/long.html
+++ b/thehive-templates/SEKOIAIntelligenceCenter_Observables_1_0/long.html
@@ -9,6 +9,10 @@
         </div>
         <div class="panel-body">
             <div>
+                <dl class="dl-horizontal">
+                    <dt>ID</dt>
+                    <dd class="wrap">{{item.id}}</dd>
+                </dl>
                 <dl class="dl-horizontal" ng-if="observable.value">
                     <dt>Value</dt>
                     <dd class="wrap">{{observable.value | fang}}</dd>
